# mqtt-tts

./: .gitignore  .gitmodules  Dockerfile  README.md  all_models.txt  build_docker.sh  config.yml  docker-config.yml  gst_tts_source.py  mqtt_client.py  pyproject.toml  requirements.txt  run-docker.sh  run.sh  tts-server.py  utils.sh
